# kursovaya_rabota_1

./: .coveragerc  .env  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
package-name/: pyproject.toml
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: __init__.py  test_coverage.py  test_final.py  test_missing.py  test_reports.py  test_services.py  test_utils.py  test_utils_extra.py  test_views.py  test_views_extra.py  test_views_full.py
