[project]
name = "package-name"
version = "0.1.0"
description = ""
authors = [
    {name = "Иван Бакулин",email = "ubahyska1992@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "package_name", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
